# ChangeLog for sys-kernel/mips-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/mips-sources/ChangeLog,v 1.136 2010/11/28 05:11:51 robbat2 Exp $

  28 Nov 2010; Robin H. Johnson <robbat2@gentoo.org> Manifest:
  Update Manifest for deblob 2.6.36.

*mips-sources-2.6.36 (16 Nov 2010)
*mips-sources-2.6.35.8 (16 Nov 2010)
*mips-sources-2.6.34.7 (16 Nov 2010)

  16 Nov 2010; Joshua Kinard <kumba@gentoo.org> -mips-sources-2.6.34.ebuild,
  +mips-sources-2.6.34.7.ebuild, +mips-sources-2.6.35.8.ebuild,
  +mips-sources-2.6.36.ebuild:
  Updated 2.6.34 to 2.6.34.7 and added ebuilds for 2.6.35.8 and 2.6.36.
  Octane is still broke as-of these releases and no ETA is set yet for its
  return.

  03 Aug 2010; Robin H. Johnson <robbat2@gentoo.org> Manifest:
  kernel-2 deblob support for 2.6.35; bug #324505: deblob-check usage.

*mips-sources-2.6.34 (07 Jun 2010)

  07 Jun 2010; Joshua Kinard <kumba@gentoo.org>
  +files/eblits/show_ip22_info-v2.eblit, -mips-sources-2.6.27.21-r1.ebuild,
  +mips-sources-2.6.34.ebuild, +files/eblits/show_ip32_info-v2.eblit,
  -mips-sources-2.6.28.9-r1.ebuild:
  Update to 2.6.34. Octane support is actually marked as testing in this
  release (persuant to the last log entry). The patches apply, but have not
  been built. New patches are in the works, as time permits. Current hold-up
  is a lockup in the 8250 Serial Core when the system boots. This release
  also adds an experimental RTC Driver for SGI O2 systems and their
  Dallas/Maxim DS1685/DS1687 timekeeping chips. Slated to be submitted
  upstream soon.

  26 Apr 2010; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  Update Manifest for deblob support in kernel-2 eclass.

*mips-sources-2.6.31.12 (13 Feb 2010)

  13 Feb 2010; Joshua Kinard <kumba@gentoo.org>
  mips-sources-2.6.27.21-r1.ebuild, mips-sources-2.6.28.9-r1.ebuild,