@@ -40,11 +40,12 @@ DIST mipsgit-2.6.36-20101116.diff.bz2 16982 RMD160 e5a529700bbb32be4ba4391bd18d4
 DIST patch-2.6.29.1.bz2 14395 RMD160 78b2817db8a001750648ee4609a94de26829a4bc SHA1 de0c8efa7927fca5c95dce0e1a47e354527a6c52 SHA256 0c44a41816082602f9d2bd45524d85f6e5fa8e4a6a9a15861048ca2aaf068d8f
 DIST patch-2.6.31.12.bz2 243521 RMD160 955d8963da110d9a97810259758c121a257d3df9 SHA1 cbdba72320a2bfb5c9da3bac89c33945dd9c519e SHA256 7dea28a76ca6362ad949ec1bf45fada4a6fc888b40360d90d2f56f01d18f72ae
 DIST patch-2.6.34.7.bz2 184957 RMD160 0f72e9496ff0082df05424ec75aff166ba6dff27 SHA1 b346d804a428239145b6c058ff0df88792c31094 SHA256 b146904ea07cc87a3fbcbd4eab51d331d56718431539e6aa29c24b072e6b7832
-DIST patch-2.6.35.8.bz2 164082 RMD160 b4203c84b1d5f8303df250ac013c3368e36404f1 SHA1 4bcc29163a5e98c20e76981b6f2c466925d98500 SHA256 cc8bd636ba49ee7ad1095cebf32a4bf0d2edcd60a5aaf29206297e9218904eb1
+DIST patch-2.6.35.9.bz2 184494 RMD160 875835bdd6726a0e8fcbefcdb91b09489cc548ba SHA1 49a7240a24b179553fa27873df4e65d288a2bdbe SHA256 337a1649110d5bd4d08b178b9437d88df692b2d4ed62b988083a132d0e057725
+DIST patch-2.6.36.3.bz2 140429 RMD160 2284b5940481e62e6e1b91c4f324333ecc3dba8d SHA1 e556a85a866003939d78068c63bd2c7920e27cc5 SHA256 e3b1a8e0461eabe7175f8078569916cc94de38524157ae3bc00cc3cddc618af9
 EBUILD mips-sources-2.6.29.1.ebuild 5252 RMD160 38f155e5f6c447fc5171c28bbcb3fa0373b0c717 SHA1 bbdf6cb24e419bc96a7f881f1430635575a3a5c5 SHA256 213700be16b1868c8f2fd76fc760a86a01be2a4ff07334d56e6bf82820a1eeda
 EBUILD mips-sources-2.6.31.12.ebuild 5259 RMD160 c62103653f5322b0dab63f57f7509166a3bafe22 SHA1 8bf2e312c62cba340d4cd8a070deb864e42d80a5 SHA256 9e10657e24b1eab38f724976f8733c5db42e7c83e9cb30a376aaf12d4fb9f610
 EBUILD mips-sources-2.6.34.7.ebuild 5254 RMD160 96c231cc91f16aaa6543fdcc60a2f4f6efffc18e SHA1 ecb86b73f52bd8c64a142493acfbf2c336c6d8ef SHA256 5721b5fc556cd4123504fd369d90ee25357305f5ec72c90a1443743caf6adc60
-EBUILD mips-sources-2.6.35.8.ebuild 5254 RMD160 b4d8bea085cf459f04c79a6eb8c2fbeea979db55 SHA1 76ba9270b9ef95971d33b4cfb554b0e2da83d737 SHA256 34b3f060b55bec6ab972748b7d07008753c8fe3d75019fe00adb440e8ddebc8c
-EBUILD mips-sources-2.6.36.ebuild 5252 RMD160 8d3536b725383917f6ef84deba6e93ffc61962d0 SHA1 12c3851a764b5a9d4fbef188dc7ed1ff7cf30329 SHA256 ef7f576ef172d0a96bed52478821c249f9e4bd4587264cca22195ba6bf2cf210
-MISC ChangeLog 53102 RMD160 d9cf71338a6a8a429cf9f3b1d376f32c0aa39f9c SHA1 7ecbb2e174f25571394f72e873763a6c4a9fd1ef SHA256 2d5bddf454449be2521f9d14ced366d92549d3a4c47d57c9f0c38bb7a8e2b59d
+EBUILD mips-sources-2.6.35.9.ebuild 5254 RMD160 3546e8a29986a6f6fe5aaa0661d4da7138334a55 SHA1 10dac8d710a738de551308c81b9cd26b3aad6f3e SHA256 ebb48b624f928e6cf8bb07df429040e361b0eac1110fb18c0219b30c5320880e
+EBUILD mips-sources-2.6.36.3.ebuild 5254 RMD160 9e62b159e1399819c3c6e1a524158c508ba71ccd SHA1 7046fcab4fae4853a047c74b8433c7bb1f87fc27 SHA256 48bec193a52118ae953a56f00775ffefc18e7bd42fcd31e60ba963990d04f8ee
+MISC ChangeLog 53386 RMD160 a25fb7eb9c8821a41276b38daa75f5a9414b1d7f SHA1 33ffdacf11dd8592cbbc036994d936a4647d86f1 SHA256 642320794eaf1fc9d4f9cc2354dc4b845c67d6459ed0462082030d2d74d6d9fb
 MISC metadata.xml 1032 RMD160 6ccd6a6c41d1fb031d973b4d4d11a57acf80c016 SHA1 8bd2efb0036be2909606e09f59f8929de929fdca SHA256 bef2534e7b2d2b868af44b9671a0932c31449c1d0c0bbebec5124d35630a9ed6
