@@ -1,6 +1,14 @@
 # ChangeLog for sys-kernel/mips-sources
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/mips-sources/ChangeLog,v 1.136 2010/11/28 05:11:51 robbat2 Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/mips-sources/ChangeLog,v 1.137 2011/02/07 08:19:07 kumba Exp $
+
+*mips-sources-2.6.36.3 (07 Feb 2011)
+*mips-sources-2.6.35.9 (07 Feb 2011)
+
+  07 Feb 2011; Joshua Kinard <kumba@gentoo.org> -mips-sources-2.6.35.8.ebuild,
+  +mips-sources-2.6.35.9.ebuild, -mips-sources-2.6.36.ebuild,
+  +mips-sources-2.6.36.3.ebuild:
+  Security updates to mips-sources.
 
   28 Nov 2010; Robin H. Johnson <robbat2@gentoo.org> Manifest:
   Update Manifest for deblob 2.6.36.
